--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my Github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, atque libero? Ea maiores error dolore necessitatibus facilis? Nobis quaerat ad atque mollitia eum eligendi, facere delectus, repudiandae, error enim vel!</p>
+    </div>
 </body>
 </html>
